Adopted a simpler shortcut for switching Dark Mode / Light Mode

--- a/Darky/DarkMode Switcher/View/MainMenu.xib
+++ b/Darky/DarkMode Switcher/View/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15702" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15702"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -91,8 +91,8 @@
                 </stackView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nWw-06-Yj4">
                     <rect key="frame" x="94" y="26" width="63" height="11"/>
-                    <textFieldCell key="cell" alignment="center" title="(⌘+Ctrl+B)" drawsBackground="YES" id="7ZG-bs-w5j">
-                        <font key="font" metaFont="system" size="9"/>
+                    <textFieldCell key="cell" alignment="center" title="(⌘+D)" drawsBackground="YES" id="7ZG-bs-w5j">
+                        <font key="font" metaFont="label" size="9"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" red="0.74942496830000005" green="0.28060209679999998" blue="0.22667015230000001" alpha="0.77999250856164382" colorSpace="custom" customColorSpace="displayP3"/>
                     </textFieldCell>
