Fix Monterey Support

--- a/Darky/DarkMode Switcher/View/MainMenu.xib
+++ b/Darky/DarkMode Switcher/View/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15702" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19455" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19455"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -52,9 +52,9 @@
                             <rect key="frame" x="60" y="0.0" width="131" height="51"/>
                             <subviews>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KyQ-Sc-PvY">
-                                    <rect key="frame" x="0.0" y="28" width="53" height="23"/>
+                                    <rect key="frame" x="-1" y="29" width="55" height="23"/>
                                     <buttonCell key="cell" type="roundTextured" title="LIGHT" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" inset="2" id="LcK-ln-A49">
-                                        <behavior key="behavior" lightByContents="YES"/>
+                                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
                                     <connections>
@@ -62,9 +62,9 @@
                                     </connections>
                                 </button>
                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="e5x-vp-obq">
-                                    <rect key="frame" x="78" y="28" width="53" height="23"/>
+                                    <rect key="frame" x="77" y="29" width="55" height="23"/>
                                     <buttonCell key="cell" type="roundTextured" title="DARK" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="66n-m9-5Jy">
-                                        <behavior key="behavior" lightByContents="YES"/>
+                                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
                                     <connections>
@@ -98,7 +98,7 @@
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dac-2R-Q2N">
-                    <rect key="frame" x="18" y="2" width="215" height="18"/>
+                    <rect key="frame" x="18" y="1" width="213" height="18"/>
                     <buttonCell key="cell" type="check" title="Check" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="fAT-Tb-Qrb">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
